--- a/package.json
+++ b/package.json
@@ -2,15 +2,27 @@
   "name": "mythoi-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx src/server.ts",
+    "db": "docker-compose up -d"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "socket.io": "^4.8.0"
+    "prisma": "^5.20.0",
+    "socket.io": "^4.8.0",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
+    "tsx": "^4.19.1"
   }
 }
