--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "prisma": "^5.20.0",
     "socket.io": "^4.8.0",
     "typescript": "^5.6.2"
