--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.20.0",
     "socket.io": "^4.8.0",
     "typescript": "^5.6.2"
@@ -27,6 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "tsx": "^4.19.1"
   }
 }
