--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsx src/server.ts",
-    "dev": "tsx src/server.ts",
+    "start": "tsx src/index.ts",
+    "dev": "tsx src/index.ts",
     "db": "docker-compose up -d"
   },
   "author": "",
@@ -20,7 +20,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.20.0",
     "socket.io": "^4.8.0",
     "typescript": "^5.6.2"
   },
@@ -29,6 +28,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "prisma": "^5.21.0",
     "tsx": "^4.19.1"
   }
 }
