--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "uuid": "^11.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
