--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - '5432:5432'
     volumes:
       - postgres_db:/var/lib/postgresql/data
+      - /src/db/triggers.sql:/docker-entrypoint-initdb.d/triggers.sql
 
 volumes:
   postgres_db:
