--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "@socket.io/postgres-adapter": "^0.4.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.1",
     "socket.io": "^4.8.0",
+    "socket.io-postgres": "^1.0.1",
     "typescript": "^5.6.2",
     "uuid": "^11.0.1"
   },
@@ -29,6 +32,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/pg": "^8.11.10",
     "prisma": "^5.21.1",
     "tsx": "^4.19.1"
   }
